parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lista
Rule 1     lista -> <empty>
Rule 2     lista -> lista ;
Rule 3     lista -> lista sentencia
Rule 4     lista -> lista error ;
Rule 5     asignacion -> VARIABLE = expresion
Rule 6     asignacion -> INDEFINIDA = expresion
Rule 7     asignacion -> VARIABLE INCREMENTO
Rule 8     asignacion -> VARIABLE DECREMENTO
Rule 9     sentencia -> asignacion ;
Rule 10    sentencia -> { listasentencias }
Rule 11    sentencia -> PRINT ( expresion ) ;
Rule 12    sentencia -> while condicion sentencia termino
Rule 13    sentencia -> if condicion sentencia termino
Rule 14    sentencia -> if condicion sentencia termino ELSE sentencia termino
Rule 15    sentencia -> for ( listaasignaciones condicion listaexpresiones ) sentencia termino
Rule 16    listaasignaciones -> <empty>
Rule 17    listaasignaciones -> siguiente
Rule 18    listaasignaciones -> listaasignaciones
Rule 19    listaasignaciones -> listaasignaciones asignacion coma siguiente
Rule 20    listaexpresiones -> <empty>
Rule 21    listaexpresiones -> siguiente
Rule 22    listaexpresiones -> listaexpresiones
Rule 23    listaexpresiones -> listaexpresiones expresion coma termino
Rule 24    expresionlogica -> TRUE
Rule 25    expresionlogica -> FALSE
Rule 26    expresionlogica -> expresion > expresion
Rule 27    expresionlogica -> expresion MAYORIGUAL expresion
Rule 28    expresionlogica -> expresion < expresion
Rule 29    expresionlogica -> expresion MENORIGUAL expresion
Rule 30    expresionlogica -> expresion IGUALREL expresion
Rule 31    expresionlogica -> expresion DIFERENTE expresion
Rule 32    expresionlogica -> expresion AND expresion
Rule 33    expresionlogica -> expresion OR expresion
Rule 34    siguiente -> ;
Rule 35    coma -> <empty>
Rule 36    coma -> ,
Rule 37    condicion -> ( expresionlogica )
Rule 38    condicion -> expresionlogica ;
Rule 39    while -> WHILE
Rule 40    if -> IF
Rule 41    for -> FOR
Rule 42    listasentencias -> <empty>
Rule 43    listasentencias -> listasentencias
Rule 44    listasentencias -> listasentencias sentencia
Rule 45    expresion -> NUMERO
Rule 46    expresion -> CONSTANTE
Rule 47    expresion -> CADENA
Rule 48    expresion -> VARIABLE
Rule 49    expresion -> asignacion
Rule 50    expresion -> expresionlogica
Rule 51    expresion -> ( expresion )
Rule 52    expresion -> ! expresion
Rule 53    expresion -> - expresion
Rule 54    expresion -> FUNCION ( expresion )
Rule 55    expresion -> expresion + expresion
Rule 56    expresion -> expresion - expresion
Rule 57    expresion -> expresion * expresion
Rule 58    expresion -> expresion / expresion
Rule 59    expresion -> expresion % expresion
Rule 60    expresion -> expresion ^ expresion
Rule 61    termino -> <empty>

Terminals, with rules where they appear

!                    : 52
%                    : 59
(                    : 11 15 37 51 54
)                    : 11 15 37 51 54
*                    : 57
+                    : 55
,                    : 36
-                    : 53 56
/                    : 58
;                    : 2 4 9 11 34 38
<                    : 28
=                    : 5 6
>                    : 26
AND                  : 32
CADENA               : 47
CONSTANTE            : 46
DECREMENTO           : 8
DIFERENTE            : 31
ELSE                 : 14
FALSE                : 25
FOR                  : 41
FUNCION              : 54
IF                   : 40
IGUALREL             : 30
INCREMENTO           : 7
INDEFINIDA           : 6
MAYORIGUAL           : 27
MENORIGUAL           : 29
NUMERO               : 45
OR                   : 33
PRINT                : 11
TRUE                 : 24
VARIABLE             : 5 7 8 48
WHILE                : 39
^                    : 60
error                : 4
{                    : 10
}                    : 10

Nonterminals, with rules where they appear

asignacion           : 9 19 49
coma                 : 19 23
condicion            : 12 13 14 15
expresion            : 5 6 11 23 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 51 52 53 54 55 55 56 56 57 57 58 58 59 59 60 60
expresionlogica      : 37 38 50
for                  : 15
if                   : 13 14
lista                : 2 3 4 0
listaasignaciones    : 15 18 19
listaexpresiones     : 15 22 23
listasentencias      : 10 43 44
sentencia            : 3 12 13 14 14 15 44
siguiente            : 17 19 21
termino              : 12 13 14 14 15 23
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . lista
    (1) lista -> .
    (2) lista -> . lista ;
    (3) lista -> . lista sentencia
    (4) lista -> . lista error ;

    ;               reduce using rule 1 (lista -> .)
    error           reduce using rule 1 (lista -> .)
    {               reduce using rule 1 (lista -> .)
    PRINT           reduce using rule 1 (lista -> .)
    VARIABLE        reduce using rule 1 (lista -> .)
    INDEFINIDA      reduce using rule 1 (lista -> .)
    WHILE           reduce using rule 1 (lista -> .)
    IF              reduce using rule 1 (lista -> .)
    FOR             reduce using rule 1 (lista -> .)
    $end            reduce using rule 1 (lista -> .)

    lista                          shift and go to state 1

state 1

    (0) S' -> lista .
    (2) lista -> lista . ;
    (3) lista -> lista . sentencia
    (4) lista -> lista . error ;
    (9) sentencia -> . asignacion ;
    (10) sentencia -> . { listasentencias }
    (11) sentencia -> . PRINT ( expresion ) ;
    (12) sentencia -> . while condicion sentencia termino
    (13) sentencia -> . if condicion sentencia termino
    (14) sentencia -> . if condicion sentencia termino ELSE sentencia termino
    (15) sentencia -> . for ( listaasignaciones condicion listaexpresiones ) sentencia termino
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO
    (39) while -> . WHILE
    (40) if -> . IF
    (41) for -> . FOR

    ;               shift and go to state 2
    error           shift and go to state 4
    {               shift and go to state 6
    PRINT           shift and go to state 7
    VARIABLE        shift and go to state 11
    INDEFINIDA      shift and go to state 12
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15

    sentencia                      shift and go to state 3
    asignacion                     shift and go to state 5
    while                          shift and go to state 8
    if                             shift and go to state 9
    for                            shift and go to state 10

state 2

    (2) lista -> lista ; .

    ;               reduce using rule 2 (lista -> lista ; .)
    error           reduce using rule 2 (lista -> lista ; .)
    {               reduce using rule 2 (lista -> lista ; .)
    PRINT           reduce using rule 2 (lista -> lista ; .)
    VARIABLE        reduce using rule 2 (lista -> lista ; .)
    INDEFINIDA      reduce using rule 2 (lista -> lista ; .)
    WHILE           reduce using rule 2 (lista -> lista ; .)
    IF              reduce using rule 2 (lista -> lista ; .)
    FOR             reduce using rule 2 (lista -> lista ; .)
    $end            reduce using rule 2 (lista -> lista ; .)


state 3

    (3) lista -> lista sentencia .

    ;               reduce using rule 3 (lista -> lista sentencia .)
    error           reduce using rule 3 (lista -> lista sentencia .)
    {               reduce using rule 3 (lista -> lista sentencia .)
    PRINT           reduce using rule 3 (lista -> lista sentencia .)
    VARIABLE        reduce using rule 3 (lista -> lista sentencia .)
    INDEFINIDA      reduce using rule 3 (lista -> lista sentencia .)
    WHILE           reduce using rule 3 (lista -> lista sentencia .)
    IF              reduce using rule 3 (lista -> lista sentencia .)
    FOR             reduce using rule 3 (lista -> lista sentencia .)
    $end            reduce using rule 3 (lista -> lista sentencia .)


state 4

    (4) lista -> lista error . ;

    ;               shift and go to state 16


state 5

    (9) sentencia -> asignacion . ;

    ;               shift and go to state 17


state 6

    (10) sentencia -> { . listasentencias }
    (42) listasentencias -> .
    (43) listasentencias -> . listasentencias
    (44) listasentencias -> . listasentencias sentencia

    }               reduce using rule 42 (listasentencias -> .)
    {               reduce using rule 42 (listasentencias -> .)
    PRINT           reduce using rule 42 (listasentencias -> .)
    VARIABLE        reduce using rule 42 (listasentencias -> .)
    INDEFINIDA      reduce using rule 42 (listasentencias -> .)
    WHILE           reduce using rule 42 (listasentencias -> .)
    IF              reduce using rule 42 (listasentencias -> .)
    FOR             reduce using rule 42 (listasentencias -> .)

    listasentencias                shift and go to state 18

state 7

    (11) sentencia -> PRINT . ( expresion ) ;

    (               shift and go to state 19


state 8

    (12) sentencia -> while . condicion sentencia termino
    (37) condicion -> . ( expresionlogica )
    (38) condicion -> . expresionlogica ;
    (24) expresionlogica -> . TRUE
    (25) expresionlogica -> . FALSE
    (26) expresionlogica -> . expresion > expresion
    (27) expresionlogica -> . expresion MAYORIGUAL expresion
    (28) expresionlogica -> . expresion < expresion
    (29) expresionlogica -> . expresion MENORIGUAL expresion
    (30) expresionlogica -> . expresion IGUALREL expresion
    (31) expresionlogica -> . expresion DIFERENTE expresion
    (32) expresionlogica -> . expresion AND expresion
    (33) expresionlogica -> . expresion OR expresion
    (45) expresion -> . NUMERO
    (46) expresion -> . CONSTANTE
    (47) expresion -> . CADENA
    (48) expresion -> . VARIABLE
    (49) expresion -> . asignacion
    (50) expresion -> . expresionlogica
    (51) expresion -> . ( expresion )
    (52) expresion -> . ! expresion
    (53) expresion -> . - expresion
    (54) expresion -> . FUNCION ( expresion )
    (55) expresion -> . expresion + expresion
    (56) expresion -> . expresion - expresion
    (57) expresion -> . expresion * expresion
    (58) expresion -> . expresion / expresion
    (59) expresion -> . expresion % expresion
    (60) expresion -> . expresion ^ expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO

    (               shift and go to state 21
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NUMERO          shift and go to state 26
    CONSTANTE       shift and go to state 27
    CADENA          shift and go to state 28
    VARIABLE        shift and go to state 29
    !               shift and go to state 31
    -               shift and go to state 32
    FUNCION         shift and go to state 33
    INDEFINIDA      shift and go to state 12

    condicion                      shift and go to state 20
    expresionlogica                shift and go to state 22
    expresion                      shift and go to state 25
    asignacion                     shift and go to state 30

state 9

    (13) sentencia -> if . condicion sentencia termino
    (14) sentencia -> if . condicion sentencia termino ELSE sentencia termino
    (37) condicion -> . ( expresionlogica )
    (38) condicion -> . expresionlogica ;
    (24) expresionlogica -> . TRUE
    (25) expresionlogica -> . FALSE
    (26) expresionlogica -> . expresion > expresion
    (27) expresionlogica -> . expresion MAYORIGUAL expresion
    (28) expresionlogica -> . expresion < expresion
    (29) expresionlogica -> . expresion MENORIGUAL expresion
    (30) expresionlogica -> . expresion IGUALREL expresion
    (31) expresionlogica -> . expresion DIFERENTE expresion
    (32) expresionlogica -> . expresion AND expresion
    (33) expresionlogica -> . expresion OR expresion
    (45) expresion -> . NUMERO
    (46) expresion -> . CONSTANTE
    (47) expresion -> . CADENA
    (48) expresion -> . VARIABLE
    (49) expresion -> . asignacion
    (50) expresion -> . expresionlogica
    (51) expresion -> . ( expresion )
    (52) expresion -> . ! expresion
    (53) expresion -> . - expresion
    (54) expresion -> . FUNCION ( expresion )
    (55) expresion -> . expresion + expresion
    (56) expresion -> . expresion - expresion
    (57) expresion -> . expresion * expresion
    (58) expresion -> . expresion / expresion
    (59) expresion -> . expresion % expresion
    (60) expresion -> . expresion ^ expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO

    (               shift and go to state 21
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NUMERO          shift and go to state 26
    CONSTANTE       shift and go to state 27
    CADENA          shift and go to state 28
    VARIABLE        shift and go to state 29
    !               shift and go to state 31
    -               shift and go to state 32
    FUNCION         shift and go to state 33
    INDEFINIDA      shift and go to state 12

    condicion                      shift and go to state 34
    expresionlogica                shift and go to state 22
    expresion                      shift and go to state 25
    asignacion                     shift and go to state 30

state 10

    (15) sentencia -> for . ( listaasignaciones condicion listaexpresiones ) sentencia termino

    (               shift and go to state 35


state 11

    (5) asignacion -> VARIABLE . = expresion
    (7) asignacion -> VARIABLE . INCREMENTO
    (8) asignacion -> VARIABLE . DECREMENTO

    =               shift and go to state 36
    INCREMENTO      shift and go to state 37
    DECREMENTO      shift and go to state 38


state 12

    (6) asignacion -> INDEFINIDA . = expresion

    =               shift and go to state 39


state 13

    (39) while -> WHILE .

    (               reduce using rule 39 (while -> WHILE .)
    TRUE            reduce using rule 39 (while -> WHILE .)
    FALSE           reduce using rule 39 (while -> WHILE .)
    NUMERO          reduce using rule 39 (while -> WHILE .)
    CONSTANTE       reduce using rule 39 (while -> WHILE .)
    CADENA          reduce using rule 39 (while -> WHILE .)
    VARIABLE        reduce using rule 39 (while -> WHILE .)
    !               reduce using rule 39 (while -> WHILE .)
    -               reduce using rule 39 (while -> WHILE .)
    FUNCION         reduce using rule 39 (while -> WHILE .)
    INDEFINIDA      reduce using rule 39 (while -> WHILE .)


state 14

    (40) if -> IF .

    (               reduce using rule 40 (if -> IF .)
    TRUE            reduce using rule 40 (if -> IF .)
    FALSE           reduce using rule 40 (if -> IF .)
    NUMERO          reduce using rule 40 (if -> IF .)
    CONSTANTE       reduce using rule 40 (if -> IF .)
    CADENA          reduce using rule 40 (if -> IF .)
    VARIABLE        reduce using rule 40 (if -> IF .)
    !               reduce using rule 40 (if -> IF .)
    -               reduce using rule 40 (if -> IF .)
    FUNCION         reduce using rule 40 (if -> IF .)
    INDEFINIDA      reduce using rule 40 (if -> IF .)


state 15

    (41) for -> FOR .

    (               reduce using rule 41 (for -> FOR .)


state 16

    (4) lista -> lista error ; .

    ;               reduce using rule 4 (lista -> lista error ; .)
    error           reduce using rule 4 (lista -> lista error ; .)
    {               reduce using rule 4 (lista -> lista error ; .)
    PRINT           reduce using rule 4 (lista -> lista error ; .)
    VARIABLE        reduce using rule 4 (lista -> lista error ; .)
    INDEFINIDA      reduce using rule 4 (lista -> lista error ; .)
    WHILE           reduce using rule 4 (lista -> lista error ; .)
    IF              reduce using rule 4 (lista -> lista error ; .)
    FOR             reduce using rule 4 (lista -> lista error ; .)
    $end            reduce using rule 4 (lista -> lista error ; .)


state 17

    (9) sentencia -> asignacion ; .

    ;               reduce using rule 9 (sentencia -> asignacion ; .)
    error           reduce using rule 9 (sentencia -> asignacion ; .)
    {               reduce using rule 9 (sentencia -> asignacion ; .)
    PRINT           reduce using rule 9 (sentencia -> asignacion ; .)
    VARIABLE        reduce using rule 9 (sentencia -> asignacion ; .)
    INDEFINIDA      reduce using rule 9 (sentencia -> asignacion ; .)
    WHILE           reduce using rule 9 (sentencia -> asignacion ; .)
    IF              reduce using rule 9 (sentencia -> asignacion ; .)
    FOR             reduce using rule 9 (sentencia -> asignacion ; .)
    $end            reduce using rule 9 (sentencia -> asignacion ; .)
    }               reduce using rule 9 (sentencia -> asignacion ; .)
    ELSE            reduce using rule 9 (sentencia -> asignacion ; .)


state 18

    (10) sentencia -> { listasentencias . }
    (43) listasentencias -> listasentencias .
    (44) listasentencias -> listasentencias . sentencia
    (9) sentencia -> . asignacion ;
    (10) sentencia -> . { listasentencias }
    (11) sentencia -> . PRINT ( expresion ) ;
    (12) sentencia -> . while condicion sentencia termino
    (13) sentencia -> . if condicion sentencia termino
    (14) sentencia -> . if condicion sentencia termino ELSE sentencia termino
    (15) sentencia -> . for ( listaasignaciones condicion listaexpresiones ) sentencia termino
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO
    (39) while -> . WHILE
    (40) if -> . IF
    (41) for -> . FOR

  ! shift/reduce conflict for } resolved as shift
  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for INDEFINIDA resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    }               shift and go to state 40
    {               shift and go to state 6
    PRINT           shift and go to state 7
    VARIABLE        shift and go to state 11
    INDEFINIDA      shift and go to state 12
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15

  ! }               [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! {               [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! PRINT           [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! VARIABLE        [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! INDEFINIDA      [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! WHILE           [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! IF              [ reduce using rule 43 (listasentencias -> listasentencias .) ]
  ! FOR             [ reduce using rule 43 (listasentencias -> listasentencias .) ]

    sentencia                      shift and go to state 41
    asignacion                     shift and go to state 5
    while                          shift and go to state 8
    if                             shift and go to state 9
    for                            shift and go to state 10

state 19

    (11) sentencia -> PRINT ( . expresion ) ;
    (45) expresion -> . NUMERO
    (46) expresion -> . CONSTANTE
    (47) expresion -> . CADENA
    (48) expresion -> . VARIABLE
    (49) expresion -> . asignacion
    (50) expresion -> . expresionlogica
    (51) expresion -> . ( expresion )
    (52) expresion -> . ! expresion
    (53) expresion -> . - expresion
    (54) expresion -> . FUNCION ( expresion )
    (55) expresion -> . expresion + expresion
    (56) expresion -> . expresion - expresion
    (57) expresion -> . expresion * expresion
    (58) expresion -> . expresion / expresion
    (59) expresion -> . expresion % expresion
    (60) expresion -> . expresion ^ expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO
    (24) expresionlogica -> . TRUE
    (25) expresionlogica -> . FALSE
    (26) expresionlogica -> . expresion > expresion
    (27) expresionlogica -> . expresion MAYORIGUAL expresion
    (28) expresionlogica -> . expresion < expresion
    (29) expresionlogica -> . expresion MENORIGUAL expresion
    (30) expresionlogica -> . expresion IGUALREL expresion
    (31) expresionlogica -> . expresion DIFERENTE expresion
    (32) expresionlogica -> . expresion AND expresion
    (33) expresionlogica -> . expresion OR expresion

    NUMERO          shift and go to state 26
    CONSTANTE       shift and go to state 27
    CADENA          shift and go to state 28
    VARIABLE        shift and go to state 29
    (               shift and go to state 42
    !               shift and go to state 31
    -               shift and go to state 32
    FUNCION         shift and go to state 33
    INDEFINIDA      shift and go to state 12
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24

    expresion                      shift and go to state 43
    asignacion                     shift and go to state 30
    expresionlogica                shift and go to state 44

state 20

    (12) sentencia -> while condicion . sentencia termino
    (9) sentencia -> . asignacion ;
    (10) sentencia -> . { listasentencias }
    (11) sentencia -> . PRINT ( expresion ) ;
    (12) sentencia -> . while condicion sentencia termino
    (13) sentencia -> . if condicion sentencia termino
    (14) sentencia -> . if condicion sentencia termino ELSE sentencia termino
    (15) sentencia -> . for ( listaasignaciones condicion listaexpresiones ) sentencia termino
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO
    (39) while -> . WHILE
    (40) if -> . IF
    (41) for -> . FOR

    {               shift and go to state 6
    PRINT           shift and go to state 7
    VARIABLE        shift and go to state 11
    INDEFINIDA      shift and go to state 12
    WHILE           shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15

    while                          shift and go to state 8
    sentencia                      shift and go to state 45
    asignacion                     shift and go to state 5
    if                             shift and go to state 9
    for                            shift and go to state 10

state 21

    (37) condicion -> ( . expresionlogica )
    (51) expresion -> ( . expresion )
    (24) expresionlogica -> . TRUE
    (25) expresionlogica -> . FALSE
    (26) expresionlogica -> . expresion > expresion
    (27) expresionlogica -> . expresion MAYORIGUAL expresion
    (28) expresionlogica -> . expresion < expresion
    (29) expresionlogica -> . expresion MENORIGUAL expresion
    (30) expresionlogica -> . expresion IGUALREL expresion
    (31) expresionlogica -> . expresion DIFERENTE expresion
    (32) expresionlogica -> . expresion AND expresion
    (33) expresionlogica -> . expresion OR expresion
    (45) expresion -> . NUMERO
    (46) expresion -> . CONSTANTE
    (47) expresion -> . CADENA
    (48) expresion -> . VARIABLE
    (49) expresion -> . asignacion
    (50) expresion -> . expresionlogica
    (51) expresion -> . ( expresion )
    (52) expresion -> . ! expresion
    (53) expresion -> . - expresion
    (54) expresion -> . FUNCION ( expresion )
    (55) expresion -> . expresion + expresion
    (56) expresion -> . expresion - expresion
    (57) expresion -> . expresion * expresion
    (58) expresion -> . expresion / expresion
    (59) expresion -> . expresion % expresion
    (60) expresion -> . expresion ^ expresion
    (5) asignacion -> . VARIABLE = expresion
    (6) asignacion -> . INDEFINIDA = expresion
    (7) asignacion -> . VARIABLE INCREMENTO
    (8) asignacion -> . VARIABLE DECREMENTO

    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    NUMERO          shift and go to state 26
    CONSTANTE       shift and go to state 27
    CADENA          shift and go to state 28
    VARIABLE        shift and go to state 29
    (               shift and go to state 42
    !               shift and go to state 31
    -               shift and go to state 32
    FUNCION         shift and go to state 33
    INDEFINIDA      shift and go to state 12

    expresionlogica                shift and go to state 46
    expresion                      shift and go to state 47
    asignacion                     shift and go to state 30

state 22

    (38) condicion -> expresionlogica . ;
    (50) expresion -> expresionlogica .

    ;               shift and go to state 48
    >               reduce using rule 50 (expresion -> expresionlogica .)
    MAYORIGUAL      reduce using rule 50 (expresion -> expresionlogica .)
    <               reduce using rule 50 (expresion -> expresionlogica .)
    MENORIGUAL      reduce using rule 50 (expresion -> expresionlogica .)
    IGUALREL        reduce using rule 50 (expresion -> expresionlogica .)
    DIFERENTE       reduce using rule 50 (expresion -> expresionlogica .)
    AND             reduce using rule 50 (expresion -> expresionlogica .)
    OR              reduce using rule 50 (expresion -> expresionlogica .)
    +               reduce using rule 50 (expresion -> expresionlogica .)
    -               reduce using rule 50 (expresion -> expresionlogica .)
    *               reduce using rule 50 (expresion -> expresionlogica .)
    /               reduce using rule 50 (expresion -> expresionlogica .)
    %               reduce using rule 50 (expresion -> expresionlogica .)
    ^               reduce using rule 50 (expresion -> expresionlogica .)


state 23

    (24) expresionlogica -> TRUE .

    ;               reduce using rule 24 (expresionlogica -> TRUE .)
    >               reduce using rule 24 (expresionlogica -> TRUE .)
    MAYORIGUAL      reduce using rule 24 (expresionlogica -> TRUE .)
    <               reduce using rule 24 (expresionlogica -> TRUE .)
    MENORIGUAL      reduce using rule 24 (expresionlogica -> TRUE .)
    IGUALREL        reduce using rule 24 (expresionlogica -> TRUE .)
    DIFERENTE       reduce using rule 24 (expresionlogica -> TRUE .)
    AND             reduce using rule 24 (expresionlogica -> TRUE .)
    OR              reduce using rule 24 (expresionlogica -> TRUE .)
    +               reduce using rule 24 (expresionlogica -> TRUE .)
    -               reduce using rule 24 (expresionlogica -> TRUE .)
    *               reduce using rule 24 (expresionlogica -> TRUE .)
    /               reduce using rule 24 (expresionlogica -> TRUE .)
    %               reduce using rule 24 (expresionlogica -> TRUE .)
    ^               reduce using rule 24 (expresionlogica -> TRUE .)
    )               reduce using rule 24 (expresionlogica -> TRUE .)
    ,               reduce using rule 24 (expresionlogica -> TRUE .)
    NUMERO          reduce using rule 24 (expresionlogica -> TRUE .)
    CONSTANTE       reduce using rule 24 (expresionlogica -> TRUE .)
    CADENA          reduce using rule 24 (expresionlogica -> TRUE .)
    VARIABLE        reduce using rule 24 (expresionlogica -> TRUE .)
    (               reduce using rule 24 (expresionlogica -> TRUE .)
    !               reduce using rule 24 (expresionlogica -> TRUE .)
    FUNCION         reduce using rule 24 (expresionlogica -> TRUE .)
    INDEFINIDA      reduce using rule 24 (expresionlogica -> TRUE .)
    TRUE            reduce using rule 24 (expresionlogica -> TRUE .)
    FALSE           reduce using rule 24 (expresionlogica -> TRUE .)


state 24

    (25) expresionlogica -> FALSE .

    ;               reduce using rule 25 (expresionlogica -> FALSE .)
    >               reduce using rule 25 (expresionlogica -> FALSE .)
    MAYORIGUAL      reduce using rule 25 (expresionlogica -> FALSE .)
    <               reduce using rule 25 (expresionlogica -> FALSE .)
    MENORIGUAL      reduce using rule 25 (expresionlogica -> FALSE .)
    IGUALREL        reduce using rule 25 (expresionlogica -> FALSE .)
    DIFERENTE       reduce using rule 25 (expresionlogica -> FALSE .)
    AND             reduce using rule 25 (expresionlogica -> FALSE .)
    OR              reduce using rule 25 (expresionlogica -> FALSE .)
    +               reduce using rule 25 (expresionlogica -> FALSE .)
    -               reduce using rule 25 (expresionlogica -> FALSE .)
    *               reduce using rule 25 (expresionlogica -> FALSE .)
    /               reduce using rule 25 (expresionlogica -> FALSE .)
    %               reduce using rule 25 (expresionlogica -> FALSE .)
    ^               reduce using rule 25 (expresionlogica -> FALSE .)
    )               reduce using rule 25 (expresionlogica -> FALSE .)
    ,               reduce using rule 25 (expresionlogica -> FALSE .)
    NUMERO          reduce using rule 25 (expresionlogica -> FALSE .)
    CONSTANTE       reduce using rule 25 (expresionlogica -> FALSE .)
    CADENA          reduce using rule 25 (expresionlogica -> FALSE .)
    VARIABLE        reduce using rule 25 (expresionlogica -> FALSE .)
    (               reduce using rule 25 (expresionlogica -> FALSE .)
    !               reduce using rule 25 (expresionlogica -> FALSE .)
    FUNCION         reduce using rule 25 (expresionlogica -> FALSE .)
    INDEFINIDA      reduce using rule 25 (expresionlogica -> FALSE .)
    TRUE            reduce using rule 25 (expresionlogica -> FALSE .)
    FALSE           reduce using rule 25 (expresionlogica -> FALSE .)


state 25

    (26) expresionlogica -> expresion . > expresion
    (27) expresionlogica -> expresion . MAYORIGUAL expresion
    (28) expresionlogica -> expresion . < expresion
    (29) expresionlogica -> expresion . MENORIGUAL expresion
    (30) expresionlogica -> expresion . IGUALREL expresion
    (31) expresionlogica -> expresion . DIFERENTE expresion
    (32) expresionlogica -> expresion . AND expresion
    (33) expresionlogica -> expresion . OR expresion
    (55) expresion -> expresion . + expresion
    (56) expresion -> expresion . - expresion
    (57) expresion -> expresion . * expresion
    (58) expresion -> expresion . / expresion
    (59) expresion -> expresion . % expresion
    (60) expresion -> expresion . ^ expresion

    >               shift and go to state 49
    MAYORIGUAL      shift and go to state 50
    <               shift and go to state 51
    MENORIGUAL      shift and go to state 52
    IGUALREL        shift and go to state 53
    DIFERENTE       shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56
    +               shift and go to state 57
    -               shift and go to state 58
    *               shift and go to state 59
    /               shift and go to state 60
    %               shift and go to state 61
    ^               shift and go to state 62


state 26

    (45) expresion -> NUMERO .

    >               reduce using rule 45 (expresion -> NUMERO .)
    MAYORIGUAL      reduce using rule 45 (expresion -> NUMERO .)
    <               reduce using rule 45 (expresion -> NUMERO .)
    MENORIGUAL      reduce using rule 45 (expresion -> NUMERO .)
    IGUALREL        reduce using rule 45 (expresion -> NUMERO .)
    DIFERENTE       reduce using rule 45 (expresion -> NUMERO .)
    AND             reduce using rule 45 (expresion -> NUMERO .)
    OR              reduce using rule 45 (expresion -> NUMERO .)
    +               reduce using rule 45 (expresion -> NUMERO .)
    -               reduce using rule 45 (expresion -> NUMERO .)
    *               reduce using rule 45 (expresion -> NUMERO .)
    /               reduce using rule 45 (expresion -> NUMERO .)
    %               reduce using rule 45 (expresion -> NUMERO .)
    ^               reduce using rule 45 (expresion -> NUMERO .)
    )               reduce using rule 45 (expresion -> NUMERO .)
    ;               reduce using rule 45 (expresion -> NUMERO .)
    ,               reduce using rule 45 (expresion -> NUMERO .)
    NUMERO          reduce using rule 45 (expresion -> NUMERO .)
    CONSTANTE       reduce using rule 45 (expresion -> NUMERO .)
    CADENA          reduce using rule 45 (expresion -> NUMERO .)
    VARIABLE        reduce using rule 45 (expresion -> NUMERO .)
    (               reduce using rule 45 (expresion -> NUMERO .)
    !               reduce using rule 45 (expresion -> NUMERO .)
    FUNCION         reduce using rule 45 (expresion -> NUMERO .)
    INDEFINIDA      reduce using rule 45 (expresion -> NUMERO .)
    TRUE            reduce using rule 45 (expresion -> NUMERO .)
    FALSE           reduce using rule 45 (expresion -> NUMERO .)


state 27

    (46) expresion -> CONSTANTE .
